--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <input class="inline" id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
       </label>
       <input type="submit" value="Submit" />
+            <button>
+        <a href="https://lawrde-ce.github.io/ojt-journey/">Back</a>
+      </button>
     </form>
   </body>
 </html>
